...
            "Greyhound" to RacingCategory.GREYHOUND_RACING,
            "Horse" to RacingCategory.HORSE_RACING,
            "Harness" to RacingCategory.HARNESS_RACING
        )
    }

    FilterButtonListMulti(
        choices = choices,
        currentChoices = currentChoices,
        selectChoices = selectChoices
    )

}
...
